# algokit-beaker-default-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README copy.md  README.md  clear.ps1  copier.yaml  pyproject.toml
.github/workflows/: cd.yaml  check-python.yaml
examples/generators/production_beaker_smart_contract_python/: .algokit.toml  README.md  pyproject.toml
examples/generators/production_beaker_smart_contract_python/.algokit/: .copier-answers.yml
examples/generators/production_beaker_smart_contract_python/.algokit/generators/create_env_file/: copier.yaml
examples/generators/production_beaker_smart_contract_python/.github/workflows/: checks.yaml  production-beaker-smart-contract-python-cd.yaml  production-beaker-smart-contract-python-ci.yaml
examples/generators/production_beaker_smart_contract_python/smart_contracts/: __main__.py
examples/generators/production_beaker_smart_contract_python/smart_contracts/cool_contract/: deploy_config.py
examples/generators/production_beaker_smart_contract_python/smart_contracts/helpers/: build.py
examples/production_beaker/: .algokit.toml  .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml
examples/starter_beaker/: .algokit.toml  .copier-answers.yml  README.md  pyproject.toml
examples/test_default_parameters/: .copier-answers.yml  README.md  pyproject.toml
includes/: contract_name_kebab.jinja  contract_name_pascal.jinja  project_name_kebab.jinja
template-content/: README.md.jinja
template_content/: .algokit.toml  .algokit.toml.jinja  .env.localnet.template.jinja  README.md.jinja  app.py  post_init.py  pyproject.toml.jinja  {% if deployment_language == 'typescript' %}package.json{% endif %}.jinja  {% if deployment_language == 'typescript' or use_typescript_jest %}package.json{% endif %}.jinja  {% if deployment_language == 'typescript' or use_typescript_jest %}tsconfig.json{% endif %}  {% if python_linter == 'flake8' %}.flake8{% endif %}  {% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja  {% if use_python_poetry %}pyproject.toml{% endif %}.jinja  {% if use_typescript_jest %}jest.config.ts{% endif %}
template_content/smart_contracts/: .env.jinja  .env.template  README.md.jinja  __init__.py  __main__.py  __main__.py.jinja  config.py  config.py.jinja  deployment.py  deployment_standard.py  helloworld.py  lab.py  test_deployment.py  {% if deployment_language == 'python' %}config.py{% endif %}  {% if deployment_language == 'typescript' %}config.py{% endif %}  {% if deployment_language == 'typescript' %}config.py{% endif %}.jinja  {% if deployment_language == 'typescript' %}deploy-config.ts{% endif %}  {% if deployment_language == 'typescript' %}deploy-config.ts{% endif %}.jinja  {% if deployment_language == 'typescript' %}index.ts{% endif %}  {% if deployment_language == 'typescript' %}index.ts{% endif %}.jinja  {% if deployment_language == 'typescript' %}package.json{% endif %}  {% if deployment_language == 'typescript' %}package.json{% endif %}.jinja
template_content/{% if ide_jetbrains %}.idea{% endif %}/: externalDependencies.xml  (+1 more)
tests/: test_generators.py  test_templates.py
tests/test_default_parameters/: .copier-answers.yml  README.md  pyproject.toml
tests/test_default_parameters/smart_contracts/: .env.template  __main__.py  config.py
tests/test_default_parameters/smart_contracts/helpers/: deploy.py  deployment_standard.py
tests_generated/test_ide_jetbrains-False/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_ide_jetbrains-False/tests/: hello_world_test.py
tests_generated/test_ide_vscode-False/: .algokit.toml  .copier-answers.yml  .gitignore  README.md  pyproject.toml
tests_generated/test_ide_vscode-False/.github/workflows/: pr.yaml
tests_generated/test_ide_vscode-False/tests/: test_helloworld.py
tests_generated/test_python_linter-ruff/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_python_linter-ruff/.tours/: getting-started-with-your-algokit-project.tour
tests_generated/test_python_linter-ruff/smart_contracts/: config.py
tests_generated/test_python_linter-ruff/smart_contracts/helpers/: build.py
tests_generated/test_smart_contract_generator_default_starter_preset_python/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_smart_contract_generator_default_starter_preset_python/.algokit/generators/create_contract/: copier.yaml
tests_generated/test_use_github_actions-True/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_use_github_actions-True/.github/workflows/: cd.yaml  checks.yaml
tests_generated/test_use_github_actions-True/smart_contracts/: __main__.py
tests_generated/test_use_github_actions-True/tests/: hello_world_test.py
tests_generated/test_use_github_actions-True_python_linter-none/: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml
tests_generated/test_use_github_actions-True_python_linter-none/.github/workflows/: checks.yaml
tests_generated/test_use_github_actions-True_python_linter-none/smart_contracts/: config.py
tests_generated/test_use_github_actions-True_python_linter-none/smart_contracts/helpers/: build.py
tests_generated/test_use_github_actions-True_use_python_mypy-False/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_use_github_actions-True_use_python_mypy-False/.github/workflows/: cd.yaml
tests_generated/test_use_github_actions-True_use_python_mypy-False/smart_contracts/helpers/: build.py
tests_generated/test_use_github_actions-True_use_python_pip_audit-False/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_use_github_actions-True_use_python_pip_audit-False/.github/workflows/: check-python.yaml
tests_generated/test_use_python_pytest-False/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_use_python_pytest-False/.github/workflows/: check-python.yaml
tests_generated/test_use_python_pytest-False/.tours/: getting-started-with-your-algokit-project.tour
tests_generated/test_use_python_pytest-False/smart_contracts/: __main__.py
(+354 files in other folders)
